namespaces/live.cloud-platform.service.justice.gov.uk/developer-experience-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "developer-experience-app-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "developer-experience-team"
    cloud-platform.justice.gov.uk/application: "Developer Experience App"
    cloud-platform.justice.gov.uk/owner: "Developer Experience: developerexperienceteam@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/developer-experience-app"
    cloud-platform.justice.gov.uk/team-name: "octo-developer-experience"
    cloud-platform.justice.gov.uk/review-after: ""
